Added the Template Layout for the _Layout page and Home page

--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
@@ -2,30 +2,109 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="profile-card">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+</div>
+<div class="leave-card">
+    <h2>Annual Leave</h2>
+    <div class="leave-cards">
+        <div class="card">
+            <h3>Annual Leave</h3>
+            <div class="card-grid">
+                <span>Entitled</span><span>Taken</span><span>Remaining</span>
+                <p>15</p><p>8</p><p>7</p>
+                <span>days</span><span>days</span><span>days</span>
+            </div>
+            <button><span>+</span></button>
+        </div>
+        <div class="card">
+            <h3>Maternity Leave</h3>
+            <div class="card-grid">
+                <span>Entitled</span><span>Taken</span><span>Remaining</span>
+                <p>90</p><p>0</p><p>90</p>
+                <span>days</span><span>days</span><span>days</span>
+            </div>
+            <button><span>+</span></button>
+        </div>
+        <div class="card">
+            <h3>Sick Leave</h3>
+            <div class="card-grid">
+                <span>Entitled</span><span>Taken</span><span>Remaining</span>
+                <p>30</p><p>0</p><p>15</p>
+                <span>days</span><span>days</span><span>days</span>
+            </div>
+            <button><span>+</span></button>
+        </div>
+        <div class="card">
+            <h3>Study Leave</h3>
+            <div class="card-grid">
+                <span>Entitled</span><span>Taken</span><span>Remaining</span>
+                <p>5</p><p>1</p><p>4</p>
+                <span>days</span><span>days</span><span>days</span>
+            </div>
+            <button><span><img src="#" alt=""></span></button>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <h2>Annual Leave History</h2>
+    <div class="leave-history">
+        <table>
+            <thead>
+            <th colspan="6">name</th>
+            <th colspan="4">surname</th>
+            <th colspan="4">Leave</th>
+            <th colspan="4">Taken</th>
+            <th colspan="4">Outstanding</th>
+            </thead>
+            <tbody>
+            <td colspan="6">John</td>
+            <td colspan="4">Doe</td>
+            <td colspan="4">Sick</td>
+            <td colspan="4">2</td>
+            <td colspan="4">8</td>
+            </tbody>
+            <tbody>
+            <td colspan="6">John</td>
+            <td colspan="4">Doe</td>
+            <td colspan="4">Annual</td>
+            <td colspan="4">2</td>
+            <td colspan="4">8</td>
+            </tbody>
+            <tbody>
+            <td colspan="6">John</td>
+            <td colspan="4">Doe</td>
+            <td colspan="4">Study</td>
+            <td colspan="4">2</td>
+            <td colspan="4">8</td>
+            </tbody>
+            <tbody>
+            <td colspan="6">John</td>
+            <td colspan="4">Doe</td>
+            <td colspan="4">Sick</td>
+            <td colspan="4">2</td>
+            <td colspan="4">8</td>
+            </tbody>
+            <tbody>
+            <td colspan="6">John</td>
+            <td colspan="4">Doe</td>
+            <td colspan="4">Annual</td>
+            <td colspan="4">2</td>
+            <td colspan="4">8</td>
+            </tbody>
+            <tbody>
+            <td colspan="6">John</td>
+            <td colspan="4">Doe</td>
+            <td colspan="4">Parental</td>
+            <td colspan="4">2</td>
+            <td colspan="4">8</td>
+            </tbody>
+            <tfoot>
+            <td colspan="6"></td>
+            <td colspan="4"></td>
+            <td colspan="4">Total</td>
+            <td colspan="4">50</td>
+            <td colspan="4">12</td>
+            </tfoot>
+        </table>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
 </div>
