--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
@@ -5,8 +5,44 @@
 }
 
 <div class="profile-card">
-    
+    <h2>My profile</h2>
+    <img src="#" alt="profile-picture">
+    <div class="personal-info">
+        <p>Title: </p><span> Ms</span>
+        <p>Name: </p><span> Jane Doe</span>
+        <p>Job Title: </p><span> Digital Analyst</span>
+    </div>
+    <h2>Work Space</h2>
+    <div class="personal-info">
+        <p>Start Date: </p><span>2022/01/20</span>
+        <p>Employment Type: </p><span>Permanent</span>
+        <p>Department: </p><span>Marketing</span>
+        <p>Location: </p><span>Sandton</span>
+        <p>Reports To: </p><span>John Doe</span>
+        <p>Same Department As:</p>
+        <div class="list">
+            <span>John Doe</span>
+            <span>John Doe</span>
+        </div>
+
+    </div>
+    <h2>Active Leave</h2>
+    <div class="active-leave">
+        <div class="card-grid-leave">
+            <span>Applied</span>
+            <span>Approved</span>
+            <span>Taken</span>
+            <p>25</p>
+            <p>15</p>
+            <p>10</p>
+            <span>days</span>
+            <span>days</span>
+            <span>days</span>
+        </div>
+    </div>
 </div>
+
+
 <div class="leave-card">
     <h2>Annual Leave</h2>
     <div class="leave-cards">
