--- a/Employee-Intranet/Emp_Intranet-UI/Views/Shared/_Layout.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
         <nav>
             <div class="logo"><img src="#" alt=""></div>
             <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="Leave.html">Leave</a></li>
-                <li><a href="Login.html">Log Out</a></li>
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Leave", "Leave", "Leave")</li>
+                <li>@Html.ActionLink("LogOut", "Login", "Authentication")</li>
             </ul>
         </nav>
         <section>
