--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         <h2>My profile</h2>
         <img src="#" alt="profile-picture">
         <div class="personal-info">
-            <p>Title: </p><span> @Model.Profile.profile_name </span>
+            <p>Title: </p><span> @Model.Profile.profile_title</span>
             <p>Name: </p><span>@Model.Profile.profile_name @Model.Profile.profile_surname</span>
             <p>Job Title: </p><span> @Model.employee.employee_jobtitle</span>
         </div>
@@ -19,7 +19,7 @@
             <p>Employment Type: </p><span>@Model.employee.employee_contract</span>
             <p>Department: </p><span>@Model.employee.department_name</span>
             <p>Location: </p><span>@Model.employee.department_location</span>
-            <p>Reports To: </p><span>John Doe</span>
+            <p>Reports To: </p><span>@Model.employee.department_manager</span>
             <p>Same Department As:</p>
             <div class="list">
                 <span>John Doe</span>
@@ -43,47 +43,23 @@
         </div>
     </div>
 
-
     <div class="leave-card">
         <h2>Annual Leave</h2>
         <div class="leave-cards">
-            <div class="card">
-                <h3>Annual Leave</h3>
-                <div class="card-grid">
-                    <span>Entitled</span><span>Taken</span><span>Remaining</span>
-                    <p>15</p><p>8</p><p>7</p>
-                    <span>days</span><span>days</span><span>days</span>
+            @foreach (var type in Model.LeaveTypes)
+            {
+                <div class="card">
+                    <h3>@Html.DisplayFor(modelItem => type.type_name) leave</h3>
+                    <div class="card-grid">
+                        <span>Entitled</span><span>Taken</span><span>Remaining</span>
+                        <p>@Html.DisplayFor(modelItem => type.type_days)</p><p>8</p><p>7</p>
+                        <span>days</span><span>days</span><span>days</span>
+                    </div>
+                    <button><span> @Html.ActionLink("take", "Take", new { id = type.Id})</span></button>
                 </div>
-                <button><span>+</span></button>
-            </div>
-            <div class="card">
-                <h3>Maternity Leave</h3>
-                <div class="card-grid">
-                    <span>Entitled</span><span>Taken</span><span>Remaining</span>
-                    <p>90</p><p>0</p><p>90</p>
-                    <span>days</span><span>days</span><span>days</span>
-                </div>
-                <button><span>+</span></button>
-            </div>
-            <div class="card">
-                <h3>Sick Leave</h3>
-                <div class="card-grid">
-                    <span>Entitled</span><span>Taken</span><span>Remaining</span>
-                    <p>30</p><p>0</p><p>15</p>
-                    <span>days</span><span>days</span><span>days</span>
-                </div>
-                <button><span>+</span></button>
-            </div>
-            <div class="card">
-                <h3>Study Leave</h3>
-                <div class="card-grid">
-                    <span>Entitled</span><span>Taken</span><span>Remaining</span>
-                    <p>5</p><p>1</p><p>4</p>
-                    <span>days</span><span>days</span><span>days</span>
-                </div>
-                <button><span><img src="#" alt=""></span></button>
-            </div>
+            }
         </div>
+        
         <h2>Annual Leave History</h2>
         <div class="leave-history">
             <table>
@@ -147,4 +123,8 @@
         </div>
 
     </div>
+}
+else
+{
+    //TODO - Need to handle the case of a user not logged in 
 }
