--- a/Employee-Intranet/Emp_Intranet-UI/Views/Shared/_Layout.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <ul>
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("Leave", "Leave", "Leave")</li>
-                <li>@Html.ActionLink("LogOut", "Login", "Auth")</li>
+                <li>@Html.ActionLink("LogOut", "Logout", "Auth")</li>
             </ul>
         </nav>
         <section>
