--- a/Employee-Intranet/Emp_Intranet-UI/Views/Shared/_Layout.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title | Company.Co</title>
     @Styles.Render("~/Content/css")
+    @Scripts.Render("~/Scripts/Modal.js")
+
 
 </head>
 <body>
@@ -28,4 +30,5 @@
     </main>
     @RenderSection("scripts", required: false)
 </body>
+
 </html>
