--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/TakeLeave.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/TakeLeave.cshtml
@@ -1,28 +1,28 @@
 ﻿@model Emp_Intranet_UI.Models.LeaveDisplayModel
 
-
-@using (Html.BeginForm())
+@if (true)
 {
-    @Html.AntiForgeryToken()
-    <div id="id01" class="modal">
-        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-        <form class="modal-content" action="/action_page.php">
-            <div class="container">
-                <h1>Delete Account</h1>
-                <p>Are you sure you want to delete your account?</p>
+    using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+            <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+            <form class="modal-content" action="/action_page.php">
+                <div class="container">
+                    <h1>Delete Account</h1>
+                    <p>Are you sure you want to delete your account?</p>
 
-                <div class="clearfix">
-                    <button type="button" class="cancelbtn">Cancel</button>
-                    <button type="button" class="deletebtn">Delete</button>
+                    <div class="clearfix">
+                        <button type="button" class="cancelbtn">Cancel</button>
+                        <button type="button" class="deletebtn">Delete</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+    }
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
